--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
   <body> 
     <header class="header">
       <div class="header__fixed">
+        <canvas id="header__Canvas"></canvas>
         <div class="header__top">
           <div class="header__left">
                 <div class="socials">
@@ -143,63 +144,69 @@
         </ul>
       </section>
       <section class="contacts">
-        <h2 class="contacts__title title">КОНТАКТЫ</h2>
-        <ul class="contacts__list">
-          <li class="contacts__item"><a href="callto:m-izmaylov" class="contacts__link">
-                  <svg class="icon icon-skype_n">
-                    <use xlink:href="pictures/sprite.svg#skype_n"></use>
-                  </svg><span>m-izmaylov</span></a></li>
-          <li class="contacts__item"><a href="callto:m-izmaylov" class="contacts__link">
-                  <svg class="icon icon-phone_n">
-                    <use xlink:href="pictures/sprite.svg#phone_n"></use>
-                  </svg><span>+38(063)7831249</span></a></li>
-          <li class="contacts__item"><a href="mailto:m-izmaylov@inbox.ru" class="contacts__link">
-                  <svg class="icon icon-envelope_n">
-                    <use xlink:href="pictures/sprite.svg#envelope_n"></use>
-                  </svg><span>m-izmaylov@inbox.ru</span></a></li>
-          <li class="contacts__item"><a href="" class="contacts__link">
-                  <svg class="icon icon-map_n">
-                    <use xlink:href="pictures/sprite.svg#map_n"></use>
-                  </svg><span>Днепр, посп Гагарина 57</span></a></li>
-        </ul>
+        <div class="contacts__data">
+          <h2 class="contacts__title title">КОНТАКТЫ</h2>
+          <ul class="contacts__list">
+            <li class="contacts__item"><a href="callto:m-izmaylov" class="contacts__link">
+                    <svg class="icon icon-skype_n">
+                      <use xlink:href="pictures/sprite.svg#skype_n"></use>
+                    </svg><span>m-izmaylov</span></a></li>
+            <li class="contacts__item"><a href="callto:m-izmaylov" class="contacts__link">
+                    <svg class="icon icon-phone_n">
+                      <use xlink:href="pictures/sprite.svg#phone_n"></use>
+                    </svg><span>+38(063)7831249</span></a></li>
+            <li class="contacts__item"><a href="mailto:m-izmaylov@inbox.ru" class="contacts__link">
+                    <svg class="icon icon-envelope_n">
+                      <use xlink:href="pictures/sprite.svg#envelope_n"></use>
+                    </svg><span>m-izmaylov@inbox.ru</span></a></li>
+            <li class="contacts__item"><a href="" class="contacts__link">
+                    <svg class="icon icon-map_n">
+                      <use xlink:href="pictures/sprite.svg#map_n"></use>
+                    </svg><span>Днепр, просп Гагарина 57</span></a></li>
+          </ul>
+        </div>
         <div id="map" class="map"></div>
       </section>
     </main>
     <footer class="footer"><span class="footer__text">Дизайн для этого сайта мне любезно предоставила Школа онлай образования LoftSchool.</span>
-          <nav class="nav_footer nav">
-            <ul class="nav__list">
-              <li class="nav__item"><a href="about.html" class="nav__link">Обо мне</a></li>
-              <li class="nav__item"><a href="works.html" class="nav__link">Мои работы</a></li>
-            </ul>
-          </nav>
-          <div class="socials_footer socials">
-            <ul class="socials__list">
-              <li class="socials__item"><a href="https://new.vk.com/id151078387" target="_blank" class="socials__link">
-                      <svg class="icon icon-vk">
-                        <use xlink:href="pictures/sprite.svg#vk"></use>
-                      </svg></a></li>
-              <li class="socials__item"><a href="https://github.com/Muxacuk" target="_blank" class="socials__link">
-                      <svg class="icon icon-github">
-                        <use xlink:href="pictures/sprite.svg#github"></use>
-                      </svg></a></li>
-              <li class="socials__item"><a href="https://www.linkedin.com/in/%D0%BC%D0%B8%D1%85%D0%B0%D0%B8%D0%BB-%D0%B8%D0%B7%D0%BC%D0%B0%D0%B9%D0%BB%D0%BE%D0%B2-a5ba64119?trk=nav_responsive_tab_profile_pic" target="_blank" class="socials__link">
-                      <svg class="icon icon-in">
-                        <use xlink:href="pictures/sprite.svg#in"></use>
-                      </svg></a></li>
-            </ul>
-          </div>
-      <div class="footer__contacts">
-        <ul class="contacts__list">
-          <li class="contacts__item"><a href="callto:m-izmaylov" class="contacts__link"><span>m-izmaylov</span></a></li>
-          <li class="contacts__item"><a href="callto:m-izmaylov" class="contacts__link"><span>+38(063)7831249</span></a></li>
-          <li class="contacts__item"><a href="mailto:m-izmaylov@inbox.ru" class="contacts__link"><span>m-izmaylov@inbox.ru</span></a></li>
-          <li class="contacts__item"><a href="" class="contacts__link"><span>Днепр, посп Гагарина 57</span></a></li>
-        </ul>
+      <div class="footer__row">
+        <div class="footer__left">
+              <nav class="nav_footer nav">
+                <ul class="nav__list">
+                  <li class="nav__item"><a href="about.html" class="nav__link">Обо мне</a></li>
+                  <li class="nav__item"><a href="works.html" class="nav__link">Мои работы</a></li>
+                </ul>
+              </nav>
+              <div class="socials_footer socials">
+                <ul class="socials__list">
+                  <li class="socials__item"><a href="https://new.vk.com/id151078387" target="_blank" class="socials__link">
+                          <svg class="icon icon-vk">
+                            <use xlink:href="pictures/sprite.svg#vk"></use>
+                          </svg></a></li>
+                  <li class="socials__item"><a href="https://github.com/Muxacuk" target="_blank" class="socials__link">
+                          <svg class="icon icon-github">
+                            <use xlink:href="pictures/sprite.svg#github"></use>
+                          </svg></a></li>
+                  <li class="socials__item"><a href="https://www.linkedin.com/in/%D0%BC%D0%B8%D1%85%D0%B0%D0%B8%D0%BB-%D0%B8%D0%B7%D0%BC%D0%B0%D0%B9%D0%BB%D0%BE%D0%B2-a5ba64119?trk=nav_responsive_tab_profile_pic" target="_blank" class="socials__link">
+                          <svg class="icon icon-in">
+                            <use xlink:href="pictures/sprite.svg#in"></use>
+                          </svg></a></li>
+                </ul>
+              </div>
+        </div>
+        <div class="footer__contacts">
+          <ul class="contacts__list">
+            <li class="contacts__item"><a href="callto:m-izmaylov" class="contacts__link"><span>m-izmaylov</span></a></li>
+            <li class="contacts__item"><a href="callto:m-izmaylov" class="contacts__link"><span>+38(063)7831249</span></a></li>
+            <li class="contacts__item"><a href="mailto:m-izmaylov@inbox.ru" class="contacts__link"><span>m-izmaylov@inbox.ru</span></a></li>
+            <li class="contacts__item"><a href="" class="contacts__link"><span>Днепр, просп Гагарина 57</span></a></li>
+          </ul>
+        </div>
       </div>
       <div class="footer__copy"><span>&copy; Михаил Измайлов <br> Я старался, не копируйте мой сайт пожалуйста, сверстайте себе свой.</span></div>
     </footer>
     <script src="js/foundation.js"></script>
-    <script async="async" defer="defer" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAdHz2oxEuk2KacNBIViBar64cy1fuQuw&amp;callback=initMap"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAdHz2oxEuk2KacNBIViBar64cy1fuQuw"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
