add typings into gitignore, add canvas

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,6 @@
   <body> 
     <header class="header">
       <div class="header__fixed">
-        <canvas id="header__Canvas"></canvas>
         <div class="header__top">
           <div class="header__left">
                 <div class="socials">
@@ -40,6 +39,7 @@
               <svg class="icon icon-arrow_down">
                 <use xlink:href="pictures/sprite.svg#arrow_down"></use>
               </svg></a></div>
+      <video autoplay="autoplay" id="header__Canvas" class="header__bg-canvas"></video>
       <div class="header__hidden">
             <nav class="nav">
               <ul class="nav__list">
